--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/genai": "^1.3.0",
     "chrome-launcher": "^1.2.0",
+    "decompress": "^4.2.1",
     "express": "^5.1.0",
+    "node-fetch": "^2.7.0",
     "puppeteer-core": "^24.9.0",
     "uuid": "^11.1.0",
     "which": "^5.0.0"
